--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="wa.me//+6285784785293">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="https://wa.me/+6285784785293">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
         <p>&mdash; Repalco</p>
     </div>
 </article>
