--- a/dodik/index.html
+++ b/dodik/index.html
@@ -492,7 +492,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
                                                                         <div class="elementor-element elementor-element-5a40f89 elementor-widget elementor-widget-heading" data-id="5a40f89" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
                                                                             <div class="elementor-widget-container">
                                                                                 <p class="elementor-heading-title elementor-size-default">
-                                                                                    Putra Pertama dari <br>Hadi Sutrisno & Ibu Sri Wilujeng </br>
+                                                                                    Putra Pertama dari bapak<br>Hadi Sutrisno & Ibu Sri Wilujeng </br>
                                                                                 </p>
                                                                             </div>
                                                                         </div>
