--- a/dodik/index.html
+++ b/dodik/index.html
@@ -492,7 +492,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
                                                                         <div class="elementor-element elementor-element-5a40f89 elementor-widget elementor-widget-heading" data-id="5a40f89" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
                                                                             <div class="elementor-widget-container">
                                                                                 <p class="elementor-heading-title elementor-size-default">
-                                                                                    Putra Pertama dari bapak<br>Hadi Sutrisno & Ibu Sri Wilujeng </br>
+                                                                                    Putra Pertama dari <br>bapak Hadi Sutrisno & Ibu Sri Wilujeng </br>
                                                                                 </p>
                                                                             </div>
                                                                         </div>
@@ -669,7 +669,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
                                                                         </div>
                                                                         <div class="elementor-element elementor-element-5c0c3e6 elementor-widget elementor-widget-heading" data-id="5c0c3e6" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
                                                                             <div class="elementor-widget-container">
-                                                                                <p class="elementor-heading-title elementor-size-default">Pukul 10.00 - Selesai WIB</p>
+                                                                                <p class="elementor-heading-title elementor-size-default">Pukul 10.00 WIB - Selesai</p>
                                                                             </div>
                                                                         </div>
                                                                         <div class="elementor-element elementor-element-10ac7b4 elementor-widget elementor-widget-heading" data-id="10ac7b4" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
@@ -765,7 +765,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
                                                                         </div>
                                                                         <div class="elementor-element elementor-element-4067835 elementor-widget elementor-widget-heading" data-id="4067835" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
                                                                             <div class="elementor-widget-container">
-                                                                                <p class="elementor-heading-title elementor-size-default">Pukul 15.00 - Selesai WIB</p>
+                                                                                <p class="elementor-heading-title elementor-size-default">Pukul 15.00 WIB - Selesai </p>
                                                                             </div>
                                                                         </div>
                                                                         <div class="elementor-element elementor-element-1a2acf9 elementor-widget elementor-widget-heading" data-id="1a2acf9" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
