--- a/dodik/index.html
+++ b/dodik/index.html
@@ -1221,7 +1221,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
                                                                         </div>
                                                                         <div class="elementor-element elementor-element-39bb50b elementor-widget elementor-widget-image" data-id="39bb50b" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="image.default">
                                                                             <div class="elementor-widget-container">
-                                                                                <img loading="lazy" decoding="async" width="300" height="98" src="assets/gambar/bca.png" class="attachment-medium size-medium wp-image-2250" alt=""/>
+                                                                                <img loading="lazy" decoding="async" width="300" height="98" src="assets/gambar/bca.jpg" class="attachment-medium size-medium wp-image-2250" alt=""/>
                                                                             </div>
                                                                         </div>
                                                                         <div class="elementor-element elementor-element-37cd7b3 elementor-widget elementor-widget-heading" data-id="37cd7b3" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
@@ -1250,7 +1250,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
                                                                                 </div>
                                                                                 <div class="elementor-element elementor-element-39bb50b elementor-widget elementor-widget-image" data-id="39bb50b" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="image.default">
                                                                                     <div class="elementor-widget-container">
-                                                                                        <img loading="lazy" decoding="async" width="300" height="98" src="assets/gambar/bj.png" class="attachment-medium size-medium wp-image-2250" alt=""/>
+                                                                                        <img loading="lazy" decoding="async" width="300" height="98" src="assets/gambar/bj.jpg" class="attachment-medium size-medium wp-image-2250" alt=""/>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="elementor-element elementor-element-37cd7b3 elementor-widget elementor-widget-heading" data-id="37cd7b3" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
