--- a/dodik/index.html
+++ b/dodik/index.html
@@ -70,10 +70,10 @@
         </script>
         <style type="text/css">
         </style>
-        <link rel="icon" href="assets/gambar/fav.png" sizes="32x32"/>
-        <link rel="icon" href="assets/gambar/fav.png" sizes="192x192"/>
-        <link rel="apple-touch-icon" href="assets/gambar/fav.png"/>
-        <meta name="msapplication-TileImage" content="assets/gambar/fav.png"/>
+        <link rel="icon" href="../assets/gambar/fav.png" sizes="32x32"/>
+        <link rel="icon" href="../assets/gambar/fav.png" sizes="192x192"/>
+        <link rel="apple-touch-icon" href="../assets/gambar/fav.png"/>
+        <meta name="msapplication-TileImage" content="../assets/gambar/fav.png"/>
     </head>
     <body class="post-template post-template-page_landingpress_slim post-template-page_landingpress_slim-php single single-post postid-6995 single-format-standard page-landingpress page-landingpress-slim header-inactive footer-inactive unselectable elementor-default elementor-kit-5 elementor-page elementor-page-6995">
    
