--- a/dodik/index.html
+++ b/dodik/index.html
@@ -60,6 +60,9 @@
         <link href='https://fonts.googleapis.com/css?family=Fasthand' rel='stylesheet'>
         <meta name="google" content="notranslate"/>
         <meta name="format-detection" content="telephone=no">
+        <meta property="og:title" content="Judul Halaman Kamu" />
+  <meta property="og:image" content="assets/gambar/fav.jpg" />
+  <meta property="og:url" content="https://ladynahdodik.my.id/dodik/index.html" />
         <meta name="apudi-verification" content="1423de57e4ab1afde5c6675b4d298c00200e4e070a7cc1c9542a0eb52aba0cd3">
         <script src="assets/script.js"></script>
         <!-- Show a message -->
