--- a/dodik/index.html
+++ b/dodik/index.html
@@ -31,7 +31,26 @@
   window.addEventListener('load', shouldBlockAccess);
   window.addEventListener('resize', shouldBlockAccess);
 </script>
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Ladynah-Dodik Wedding" />
+<meta property="og:description" content="Please Open & Save The Date" />
+<meta property="og:image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:url" content="https://ladynahdodik.my.id/dodik/index.html" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Ladynah-Dodik Wedding" />
 
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Ladynah-Dodik Wedding" />
+<meta name="twitter:description" content="Please Open & Save The Date" />
+<meta name="twitter:image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
+
+<!-- Additional Meta Tags -->
+<meta name="image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
+<link rel="image_src" href="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
 
   
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
