--- a/ladynah/auto-send.html
+++ b/ladynah/auto-send.html
@@ -310,7 +310,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1> WhatsApp Invitation Sender  Dodik</h1>
+            <h1> WhatsApp Invitation Sender  Ladynah</h1>
             <p>Kirim undangan pernikahan dengan mudah melalui WhatsApp</p>
             <div style="font-size: 0.9em; opacity: 0.8; margin-top: 10px;">
                 💡 Aplikasi akan membuka WhatsApp untuk memilih kontak
