--- a/dodik/index.html
+++ b/dodik/index.html
@@ -11,7 +11,7 @@
         <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
         <!-- This site is optimized with the Yoast SEO Premium plugin v19.7 (Yoast SEO v19.14) - https://yoast.com/wordpress/plugins/seo/ -->
         <title>Ladynah-Dodik Wedding</title>
-        <meta name="description" content="Please Open &amp; Save The Date"/>
+        <meta property="og:description" content="Selasa, 17 Juni 2025 - Akad Nikah | Kamis, 19 Juni 2025 - Resepsi. Dengan penuh kebahagiaan, kami mengundang Anda untuk hadir dalam acara pernikahan kami." />
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
