--- a/dodik/index.html
+++ b/dodik/index.html
@@ -8,11 +8,21 @@
                 max-width: 100% !important;
             }
         </style>
-        <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
-        <!-- This site is optimized with the Yoast SEO Premium plugin v19.7 (Yoast SEO v19.14) - https://yoast.com/wordpress/plugins/seo/ -->
-        <title>Ladynah-Dodik Wedding</title>
-        <meta property="og:description" content="Selasa, 17 Juni 2025 - Akad Nikah | Kamis, 19 Juni 2025 - Resepsi. Dengan penuh kebahagiaan, kami mengundang Anda untuk hadir dalam acara pernikahan kami." />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+            <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Ladynah & Dodik Wedding">
+    <meta property="og:title" content="Ladynah & Dodik Wedding - 17 & 19 Juni 2025">
+    <meta property="og:description" content="Dengan penuh kebahagiaan, kami mengundang Anda untuk hadir dalam acara pernikahan kami. Akad Nikah: Selasa, 17 Juni 2025 | Resepsi: Kamis, 19 Juni 2025">
+    <meta property="og:url" content="https://ladynahdodik.my.id/dodik/index.html">
+    <meta property="og:image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg">
+    <meta property="og:image:secure_url" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Ladynah & Dodik Wedding Invitation">
+    <meta property="og:locale" content="id_ID">
+      
+    <title>Ladynah-Dodik Wedding</title>
+        
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,22 +41,7 @@
   window.addEventListener('load', shouldBlockAccess);
   window.addEventListener('resize', shouldBlockAccess);
 </script>
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Ladynah-Dodik Wedding" />
-<meta property="og:description" content="Please Open & Save The Date" />
-<meta property="og:image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta property="og:url" content="https://ladynahdodik.my.id/dodik/index.html" />
-<meta property="og:type" content="website" />
-<meta property="og:site_name" content="Ladynah-Dodik Wedding" />
 
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Ladynah-Dodik Wedding" />
-<meta name="twitter:description" content="Please Open & Save The Date" />
-<meta name="twitter:image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
 
 <!-- Additional Meta Tags -->
 <meta name="image" content="https://ladynahdodik.my.id/dodik/assets/gambar/fav.jpg" />
