--- a/dodik/index.html
+++ b/dodik/index.html
@@ -1748,7 +1748,7 @@ class="has_eae_slider elementor-column elementor-col-100 elementor-inner-column 
             var elementorFrontendConfig = {
                 "environmentMode": {
                     "edit": false,
-                    "wpPreview": true,
+                    "wpPreview": false,
                     "isScriptDebug": false
                 },
                 "i18n": {
