--- a/dodik/index.html
+++ b/dodik/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <meta property="og:image" itemprop="image" content="https://…fav.jpg" />
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0">
         <style type="text/css">
